--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,13 +1,18 @@
-// Light Theme
+
 :root {
-  --color-bg: #ffffff;
-  --color-text: #222222;
-  --color-primary: #4f46e5; // mor
-  --color-secondary: #64748b; // gri
-  --color-border: #e2e8f0;
+  --color-bg: #ffffff;              
+  --color-bg-dark: #1f2937;        
+  --color-text: #222222;           
+  --color-text-light: #f1f5f9;      
+  --color-text-muted: #94a3b8;     
+  --color-primary: #4f46e5;         
+  --color-primary-dark: #0284c7;    
+  --color-secondary: #64748b;       
+  --color-border: #e2e8f0;        
   --font-main: "Inter", sans-serif;
 }
 
+// Dark theme
 [data-theme="dark"] {
   --color-bg: #1e1e1e;
   --color-text: #f5f5f5;
